<resources>
    <string name="app_name">Beer Here Now</string>
    <string name="beer_searchBox">Enter beer name</string>
    <string name="title">What do you want to drink?</string>
    <string name="search">Search</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Description of beer</string>
    <string name="beer_name">Loading...</string>
    <string name="search_term">search term</string>
    <string name="searchTitle">Search results for:</string>
    <string name="alcoholContent">0</string>
    <string name="percentSign">%</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapSearch">Search</string>
    <string name="bars">Bars</string>
    <string name="breweries">Breweries</string>
    <string name="to">To</string>
    <string name="find_bars">Find bars</string>
    <string name="beerlogo">beerLogo</string>
    <string name="alcohol_content">Alcohol Content:</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="open_map">Find Bars</string>
    <string name="submit">Submit</string>
    <string name="rating">Your Rating</string>
    <string name="score">0</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password, reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your email so we can send you your new password.</string>
    <string name="loginMessage">Please enter your email and password to login</string>
    <string name="registerMessage">Please enter your email and password to sign up</string>
</resources>
