<RelativeLayout
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/TF_location"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/B_search"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_above="@+id/B_breweries"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="42dp"
        android:onClick="onClick"
        android:text="@string/mapSearch" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.conorarranmore.beerapp.MapsActivity"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/B_Bars"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/B_Bars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TF_location"
        android:onClick="onClick"
        android:text="@string/bars"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/B_schools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TF_location"
        android:layout_toEndOf="@+id/B_Bars"
        android:onClick="onClick"
        android:layout_toRightOf="@+id/B_Bars" />

    <Button
        android:id="@+id/B_breweries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TF_location"
        android:layout_toEndOf="@+id/B_schools"
        android:onClick="onClick"
        android:text="@string/breweries"
        android:layout_toRightOf="@+id/B_schools" />

    <Button
        android:id="@+id/B_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/B_breweries"
        android:layout_toEndOf="@+id/B_breweries"
        android:onClick="onClick"
        android:text="@string/to"
        android:layout_toRightOf="@+id/B_breweries" />
</RelativeLayout>