<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.conorarranmore.beerapp.MainActivity"
    android:background="@mipmap/mainbackground">

    <EditText
        android:id="@+id/editText"
        android:layout_width="333dp"
        android:layout_height="40dp"
        android:layout_marginBottom="360dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/beer_searchBox"
        android:inputType="textPersonName"
        android:padding="5dip"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rounded_corners"
        android:padding="5dip"
        android:text="@string/search"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="36dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:contentDescription="@string/find_bars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/mapsicon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="72dp"
        android:layout_height="18dp"
        android:layout_marginBottom="52dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:text="@string/open_map"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>